test/resources/parser/passing/IfCondition.grading.amy
object IfCondition
  if (val x: Boolean = true; x) then 1 else 2 end if
end IfCondition
