test/resources/parser/failing/TypeWidth.grading.amy
object TypeWidth
  def foo(): Boolean(32) := true end foo
end TypeWidth